Github Issue # 127 - Resource file name overlap

--- a/ckan/public/base/css/main.css
+++ b/ckan/public/base/css/main.css
@@ -7115,6 +7115,7 @@ h4 small {
   margin: 0 0 5px 0;
   font-size: 18px;
   line-height: 1.3;
+  word-wrap:break-word;
 }
 .context-info .info {
   margin-top: 15px;
